--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -17,7 +17,7 @@ h2 {
 	margin-bottom: 0px;
 	margin-top: 0px;
 	text-align: center;
-	width: 25%;
+	width: 100px;
 	margin-left: auto;
 	font-size: 16px;
 }
